components/support/error/tests/returns_result_but_incorrect_error.stderr
error[E0308]: mismatched types
  --> tests/returns_result_but_incorrect_error.rs:42:2
   |
42 |  #[handle_error(ExternalError)]
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  |
   |  expected struct `ExternalError`, found struct `OtherExternalError`
   |  expected `Result<String, ExternalError>` because of return type
   |
   = note: expected enum `Result<_, ExternalError>`
              found enum `Result<_, OtherExternalError>`
   = note: this error originates in the attribute macro `handle_error` (in Nightly builds, run with -Z macro-backtrace for more info)
